--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-debugbar": "^3.13",
+        "doctrine/dbal": "^4.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9"
     },
